--- a/style.css
+++ b/style.css
@@ -4,9 +4,10 @@
     box-sizing: border-box;
 }
 
-heder {
+header {
     height:700px;
-    background-color: blue;
+    background-image: url(Path1.png);
+    width:100%;
 }
 .navbar {
     color: #FFFFFF;
@@ -15,6 +16,7 @@ heder {
     top: 0;
     width: 100%;
     padding-top: 56px;
+    z-index: 1;
 }
 
 nav ul {
@@ -23,10 +25,18 @@ nav ul {
 
 .navbar li {
     list-style: none;
-    
+
 }
 
 /* .navbar a {
     display: block;
     float: left;
 } */
+
+.color-overlay {
+  width: 100%;
+  height: 100%;
+  background: #000;
+  opacity: .5;
+
+}
