--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
-* {
+body, html {
     margin: 0;
     padding: 0;
-    box-sizing: border-box;
+    /* box-sizing: border-box; */
 }
 
 header {
@@ -9,34 +9,48 @@ header {
     background-image: url(Path1.png);
     width:100%;
 }
-.navbar {
+nav {
     color: #FFFFFF;
     font-size: 18px;
     position: fixed;
     top: 0;
     width: 100%;
-    padding-top: 56px;
-    z-index: 1;
+    /* background: transparent; */
+    /* display: flex; */
+    justify-content: space-between;
+
 }
 
 nav ul {
     display: flex;
+    list-style: none;
+    padding: 0 134px;
 }
 
 .navbar li {
-    list-style: none;
 
+    padding: 56px 36px;
+
+}
+
+nav ul li a {
+  text-decoration: none;
 }
 
 /* .navbar a {
     display: block;
     float: left;
 } */
+.navbar .logo {
+  margin-right: auto;
+}
 
 .color-overlay {
   width: 100%;
   height: 100%;
   background: #000;
   opacity: .5;
+  z-index: -1;
+  /* position: absolute; */
 
 }
