--- a/style.css
+++ b/style.css
@@ -1,7 +1,8 @@
 body, html {
     margin: 0;
     padding: 0;
-    /* box-sizing: border-box; */
+    box-sizing: border-box;
+    font-family: 'Nunito Sans', sans-serif;
 }
 
 .heading h1 {
@@ -109,14 +110,11 @@ nav ul li a {
 
 
 
-.col-left, .col-right {
+.col-left{
   /* width: 50%; */
   /* float: left; */
   display: flex;
   flex-direction: column;
+  justify-content: center;
+  margin-right: 100px;
 }
-
-.col-right {
-  left: 50%;
-  position: absolute;
-} */
