--- a/style.css
+++ b/style.css
@@ -5,8 +5,14 @@ body, html {
     font-family: 'Nunito Sans', sans-serif;
 }
 
-.heading h1 {
+.about-heading h1 {
   font-size: 36px;
+}
+
+.heading h1 {
+  font-size: 48px;
+  padding-top: 92px;
+  text-align: center;
 }
 
 img {
@@ -117,4 +123,29 @@ nav ul li a {
   flex-direction: column;
   justify-content: center;
   margin-right: 100px;
+}
+
+.features {
+    width: 100%;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    padding-bottom: 60px;
+    padding-top: 60px;
+}
+
+.cards-container {
+
+    -ms-flex-wrap: wrap;
+    flex-wrap: wrap;
+    -webkit-box-pack: center;
+    -ms-flex-pack: center;
+    justify-content: center;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-flex: 1;
+    -ms-flex: 1;
+    flex: 1;
+
 }
