--- a/style.css
+++ b/style.css
@@ -10,9 +10,13 @@ body, html {
 }
 
 .heading h1 {
-  font-size: 48px;
+  font-size: 44px;
   padding-top: 92px;
   text-align: center;
+}
+
+section {
+  /* height: 100%; */
 }
 
 img {
@@ -22,7 +26,7 @@ img {
 
 header {
     height:700px;
-    background-image: url(Path1.png);
+    background-image: url(img/Path1.png);
     width:100%;
 }
 nav {
@@ -105,6 +109,7 @@ nav ul li a {
 
 .about {
   max-height: 686px;
+  height: 100%;
 }
 
 .inner-row {
@@ -125,7 +130,7 @@ nav ul li a {
   margin-right: 100px;
 }
 
-.features {
+.announcements-container {
     width: 100%;
     display: -webkit-box;
     display: -ms-flexbox;
@@ -307,4 +312,9 @@ nav ul li a {
 }
 .card:hover .card-meta, .card:focus .card-meta {
   max-height: 1em;
+}
+
+.blog {
+  height: 100%;
+  max-height: 1000px;
 }
