--- a/style.css
+++ b/style.css
@@ -2,17 +2,19 @@ body, html {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    font-family: 'Nunito Sans', sans-serif;
+    font-family: 'Roboto', sans-serif;
 }
 
 .about-heading h1 {
   font-size: 36px;
+  font-weight: 500;
 }
 
 .heading h1 {
   font-size: 44px;
   padding-top: 92px;
   text-align: center;
+  font-weight: 500;
 }
 
 section {
@@ -38,6 +40,7 @@ nav {
     /* background: transparent; */
     /* display: flex; */
     justify-content: space-between;
+    z-index: 10;
 
 }
 
@@ -184,11 +187,7 @@ nav ul li a {
 	max-width: 1100px;
 	margin: 0 auto;
 }
-//Todo clean up some crappy code
-.container {
-  max-width: 1100px;
-  margin: 0 auto;
-}
+
 
 .cards {
   display: -webkit-flex;
@@ -246,6 +245,8 @@ nav ul li a {
 }
 .card .card-summary {
   padding: 5% 5% 3% 5%;
+  font-size: 1em;
+  font-weight: 400;
 }
 .card .card-header {
   position: relative;
@@ -275,6 +276,7 @@ nav ul li a {
 }
 .card .card-title h3 {
   font-size: 1.2em;
+  /* font-weight: 500; */
   line-height: 1.2;
   padding: 0 3.5%;
   margin: 0;
@@ -317,4 +319,32 @@ nav ul li a {
 .blog {
   height: 100%;
   max-height: 1000px;
+}
+
+.contact {
+    background: none repeat scroll 0 0 #fff;
+    box-shadow: 0 0 10px 0 rgba(0, 0, 0, 0.5);
+    padding: 6em 2em;
+    position: relative;
+    z-index: 2;
+    text-align: center
+}
+
+form {
+    padding: 20px 0;
+}
+
+.form-group input, .form-group textarea  {
+    padding: 20px;
+    margin: 2em 2em;
+    width: 90%;
+}
+
+.form-group textarea {height: 208px;
+width: 90%;
+}
+
+input[type="submit"]
+ {
+    margin: 2em;
 }
