--- a/style.css
+++ b/style.css
@@ -21,6 +21,10 @@ section {
   /* height: 100%; */
 }
 
+section.announcements, section.blog {
+  background-color: #F1F1F1;
+}
+
 img {
     vertical-align: middle;
     max-width: 100%;
@@ -32,7 +36,7 @@ header {
     width:100%;
 }
 nav {
-    color: #FFFFFF;
+
     font-size: 18px;
     position: fixed;
     top: 0;
@@ -52,13 +56,13 @@ nav ul {
 
 .navbar li {
 
-    padding: 56px 36px;
+    padding: 36px 36px;
 
 }
 
 nav ul li a {
   text-decoration: none;
-  color: #000;
+  color: #fff;
 }
 
 /* .navbar a {
@@ -73,7 +77,7 @@ nav ul li a {
   width: 100%;
   height: 100%;
   background: #000;
-  opacity: .5;
+  opacity: .7;
   z-index: -1;
   /* position: absolute; */
 
@@ -93,6 +97,7 @@ nav ul li a {
 
 .center-text h1 {
     font-size: 72px;
+    font-weight: 400;
 }
 
 .center-text p {
